--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   <h1>Zasada zachowania pędu</h1>
   <p>
   <dfn>Zasada zachowania pędu</dfn>
-   "– Suma wektorowa pędów wszystkich elementów układu izolowanego pozostaje stała."
+   – Suma wektorowa pędów wszystkich elementów układu izolowanego pozostaje stała.
   </p>
   <p>Doświadczenie</p>
   <video src="Dos.mp4" controls width="300" height="200">
